--- a/style.css
+++ b/style.css
@@ -1,4 +1,16 @@
 /*  */
+.container {
+    display: grid;
+}
+.row {
+ display: flex;
+}
 .spot {
-    display: inline-block;
+    display: flex;
+    width: 100px;
+    height: 100px;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    background-color: #eee;
 }
