--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 }
 .row {
  display: flex;
+ justify-content: center;
 }
 .spot {
     display: flex;
@@ -13,4 +14,19 @@
     align-items: center;
     border: 1px solid black;
     background-color: #eee;
+}
+
+.row {
+    position: relative;  
+}
+
+span {
+  position: absolute;
+  left: 0%;
+  top: 50%;
+  height: 2px;
+  background: #c00;
+  content: "";
+  width: 100%;
+  z-index: 10;
 }
