--- a/style.css
+++ b/style.css
@@ -51,10 +51,15 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid black;
     background-color: #eee;
     font-size: clamp(1rem, 10vw, 10rem);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.spot:not(:last-child) {
+    border-right: 0.3rem solid black;
+}
+.row:not(:last-child) {
+    border-bottom: 0.3rem solid black;
 }
 
 .row {
