--- a/style.css
+++ b/style.css
@@ -35,12 +35,46 @@ body {
     align-items: center;
 }
 
+.set-up {
+    width: 60vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    row-gap: 2rem;
+}
+.players {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.name1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+}
+.name2 {
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+input {
+    display: block;
+    width: 90%;
+    height: 1.5rem;
+    text-align: center;
+}
+.start-reset {
+    grid-column: 1/3;
+    grid-row: 2/3;
+}
+
+
 .container {
     width: 60vw;
     height: 60vw;
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr;
+
+    margin-top: 2rem;
 }
 .row {
     display: grid;
