--- a/style.css
+++ b/style.css
@@ -40,12 +40,13 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
-    row-gap: 2rem;
+    gap: 2rem 1rem;
 }
 .players {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 .name1 {
     grid-column: 1/2;
@@ -64,6 +65,9 @@ input {
 .start-reset {
     grid-column: 1/3;
     grid-row: 2/3;
+}
+.nameP1, .nameP2, .scoreP1, .scoreP2 {
+    font-size: clamp(1rem, 8vw, 2rem);
 }
 
 
