--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
 
 .set-up {
     width: 60vw;
+    height: 10rem;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
@@ -56,6 +57,10 @@ body {
     grid-column: 2/3;
     grid-row: 1/2;
 }
+.name1, .name2 {
+    font-size: 1.2rem;
+    justify-content: space-around;
+}
 input {
     display: block;
     width: 90%;
@@ -65,6 +70,11 @@ input {
 .start-reset {
     grid-column: 1/3;
     grid-row: 2/3;
+    width: 50%;
+    height: 80%;
+    justify-self: center;
+    align-self: center;
+    font-size: 1rem;
 }
 .nameP1, .nameP2, .scoreP1, .scoreP2 {
     font-size: clamp(1rem, 8vw, 2rem);
