--- a/style.css
+++ b/style.css
@@ -80,7 +80,6 @@ input {
     font-size: clamp(1rem, 8vw, 2rem);
 }
 
-
 .container {
     width: 60vw;
     height: 60vw;
@@ -108,6 +107,11 @@ input {
 }
 .row:not(:last-child) {
     border-bottom: 0.3rem solid black;
+}
+
+.play-turn {
+    font-size: 2rem;
+    margin-top: 1rem;
 }
 
 .row {
